# devsecops-demo

./: .gitignore  README.md  pyproject.toml
app/: main.py  routes.py
container/: .dockerignore  Containerfile
sbom/: bom.json  reporte_sbom.html
tests/: test_app.py
