[project]
name = "devsecops-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bandit>=1.9.4",
    "cyclonedx-bom>=7.3.0",
    "flask>=3.1.3",
    "jinja2>=3.1.6",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
